Blog section Added

--- a/index.html
+++ b/index.html
@@ -114,9 +114,58 @@
         </div>
         
         <!----------- BLOG Section---------->
-
-    </div>
+        <div class="blog">
+            <div class="top">
+                    <h2 class="heading">Blog</h2>
+                    <p class="sub-heading">
+                        Insights, thoughts, industry trends, marketing tips, eDesign news, nerdy stuff, it's all here.
+                    </p>
+                </div>
+                <div class="wrapper">
+                    <div class="blog-item">
+                        <div class="upper-part">
+                            <div class="img-wrapper">
+                                <img src="Images/thumbnail-lasetnet.svg" alt="">
+                            </div>
+                            <p class="caption">November 10, 2021</p>
+                        </div>
+                        <div class="lower-part">
+                            <div class="title">LaserNetUs Website Launch</div>
+                            <p class="text first">LaserNetUs has a new brand identity and website designed by eDesign
+                                interactive. The homepage is dynamic and eye-catching. The website aims to highlight the
+                                innovative nature of high-intensity laser technlogy.</p>
+                            </div>
+                        </div>
+                        <div class="blog-item">
+                            <div class="upper-part">
+                                <div class="img-wrapper">
+                                    <img src="images/thumbnail-oinj.svg" alt="">
+                                </div>
+                                <p class="caption">February 21, 2021</p>
+                            </div>
+                            <div class="lower-part">
+                            <div class="title">How we helped an Orthopedic Practice Increase their traffic</div>
+                            <p class="text second">We are honored and excited to be working with The Orthopedic Institute of
+                                New Jersey, the largest practice in northwest New Jersey.</p>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <div class="upper-part">
+                            <div class="img-wrapper">
+                                <img src="images/thumbnail-accessibility.svg" alt="">
+                            </div>
+                            <p class="caption">July 03, 2021</p>
+                        </div>
+                        <div class="lower-part">
+                            <div class="title">The Increasing importance of Web Accessibility</div>
+                            <p class="text third">Is your website accessible to visitors with impairments?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="view-all-btn"><a href="#">View All</a></div>
+            </div>
       </div>
+    </div>
     </div>
 </body>
 </html>
