Footer Section-1 added

--- a/index.html
+++ b/index.html
@@ -164,8 +164,48 @@
                 </div>
                 <div class="view-all-btn"><a href="#">View All</a></div>
             </div>
+
+            <!----------- FOOTER Section-1---------->
+
+            <div class="footer-section-1">
+                <div class="left">
+                    <h3 class="logo-text">Awwwsome.</h3>
+                    <p class="text">Our team can create amazing web experiences, beginning with deep market research,
+                        practical strategies, and professional execution.
+                    </p>
+                </div>
+                <div class="right">
+                    <div class="column">
+                        <h3 class="heading">ABOUT US</h3>
+                        <ul class="links">
+                            <li><a href="#">Works</a></li>
+                            <li><a href="#">Strategy</a></li>
+                            <li><a href="#">Releases</a></li>
+                            <li><a href="#">Press</a></li>
+                            <li><a href="#">Mission</a></li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">CUSTOMERS</h3>
+                        <ul class="links">
+                            <li><a href="#">Trending</a></li>
+                            <li><a href="#">Popular</a></li>
+                            <li><a href="#">Customers</a></li>
+                            <li><a href="#">Features</a></li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">SUPPORT</h3>
+                        <ul class="links">
+                            <li><a href="#">Developers</a></li>
+                            <li><a href="#">Support</a></li>
+                            <li><a href="#">Customer Service</a></li>
+                            <li><a href="#">Guide</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
-    </div>
-    </div>
 </body>
 </html>
