Footer section-2 added

--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
                     </div>
                 </div>
             </div>
+            <!-- FOOTER Section-2 -->
+            <footer class="footer-section-2">2022 &copy;. Awwwsome Designers</footer>
         </div>
       </div>
 </body>
