padding, margin and link corrected

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </div>
             </div>
             <!-- FOOTER Section-2 -->
-            <footer class="footer-section-2">2022 &copy;. Awwwsome Designers</footer>
+            <footer class="footer-section-2"><a href="#">2022 &copy;. Awwwsome Designers</a></footer>
         </div>
       </div>
 </body>
