--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="main-wrapper">
-      <div class="container">
+      <main class="container">
 
         <!-----------HEADER----------------->
 
@@ -37,7 +37,7 @@
 
         <!----------- Main BANNER---------->
 
-        <div class="banner-details">
+        <section class="banner-details">
             <div class="left">
                 <h1 class="heading">
                     We do the work you stay focused on your customers.
@@ -56,14 +56,14 @@
                     <a href="#">About Us</a>
                 </div>
             </div>
-            <div class="right">
+            <aside class="right">
                 <img src="images/hero image.svg" alt="hero-image">
-            </div>
-        </div>
+            </aside>
+        </section>
 
         <!----------- SERVICE Section---------->
         
-        <div class="service-section">
+        <section class="service-section">
             <h2 class="heading">What we do</h2>
             <div class="wrapper">
                 <div class="service-item">
@@ -111,10 +111,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         
         <!----------- BLOG Section---------->
-        <div class="blog">
+        <section class="blog">
             <div class="top">
                     <h2 class="heading">Blog</h2>
                     <p class="sub-heading">
@@ -163,11 +163,11 @@
                     </div>
                 </div>
                 <div class="view-all-btn"><a href="#">View All</a></div>
-            </div>
+        </section>
 
             <!----------- FOOTER Section-1---------->
 
-            <div class="footer-section-1">
+            <footer class="footer-section-1">
                 <div class="left">
                     <h3 class="logo-text">Awwwsome.</h3>
                     <p class="text">Our team can create amazing web experiences, beginning with deep market research,
@@ -204,10 +204,10 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </footer>
             <!-- FOOTER Section-2 -->
             <footer class="footer-section-2"><a href="#">2022 &copy;. Awwwsome Designers</a></footer>
-        </div>
+        </main>
       </div>
 </body>
 </html>
