Normal text inserted instead of Logo text

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <header class="header">
           <div class="logo">
             <img src="./images/Awwwsome..svg" alt="Awwwsome" />
+            <h2 class="logo-text">A</h2>
           </div>
           
                 <!-- menu icon for mobile navbar -->
